--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ body {
     background-position: center;
     background-size: cover;
 }
-h1 {
-    text-align: center;
-    font-size: 48px;
-    color: white;
+.hyther {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .profile-picture {
     width: 128px;
@@ -29,7 +29,7 @@ h1 {
 .centered-block {
     background-color: rgba(255, 255, 255, 0.8);
     width: 500px;
-    height: 900px;
+    height: 930px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -46,9 +46,10 @@ h1 {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.4s ease;
     height: 50px;
     width: 400px;
+    text-decoration: none;
 }
 .link-block:hover {
     background-color: rgba(113, 241, 255, 0.3);
